# backend/src/auth/dto/signin.response.dto.ts
@@ -1,10 +1,10 @@
 import { ApiProperty } from "@nestjs/swagger";
-import { UserResponseDto } from "../../user/dto";
+import { UserDto } from "../../user/dto";
 
 export class SigninResponseDto {
     @ApiProperty()
     access_token: string;
 
     @ApiProperty()
-    user: UserResponseDto
+    user: UserDto
 }
