# backend/src/category/category.controller.ts
@@ -1,7 +1,7 @@
 import { Body, Controller, Delete, Get, Param, Post } from "@nestjs/common";
 import { CategoryService } from "./category.service";
-import { CreateCategoryDto } from "./dto";
-import { ApiBearerAuth, ApiTags } from "@nestjs/swagger";
+import { CategoryDto, CreateCategoryDto } from "./dto";
+import { ApiBearerAuth, ApiOkResponse, ApiTags } from "@nestjs/swagger";
 
 @ApiTags('category')
 @ApiBearerAuth()
@@ -10,11 +10,13 @@ export class CategoryController {
     constructor(private readonly categoryService: CategoryService) { }
     
     @Get()
+    @ApiOkResponse({type: CategoryDto, isArray: true})
     getAllCategories() {
         return this.categoryService.findAll();
     }
 
     @Post()
+    @ApiOkResponse({type: CategoryDto})
     createCategory(@Body() dto: CreateCategoryDto) {
         return this.categoryService.create(dto);
     }
