# backend/src/question-bank/dto/update-bank.dto.ts
@@ -1,0 +1,5 @@
+import { CreateBankDto } from "./create-bank.dto";
+
+export class UpdateBankDto extends CreateBankDto{
+    
+}
